--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-visibility-sensor",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Sensor component for React that notifies you when it goes in or out of the window viewport.",
   "main": "visibility-sensor.jsx",
   "scripts": {
@@ -8,6 +8,7 @@
   },
   "keywords": [
     "react",
+    "react-component",
     "visibility"
   ],
   "author": "joshwnj",
