--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "visibility-sensor.jsx",
   "scripts": {
     "build-test": "browserify -t reactify -o tests/bundle.js tests/visibility-sensor-spec.jsx",
-    "test": "npm run build-test && karma start --single-run"
+    "test": "npm run build-test && ./node_modules/karma/bin/karma start --single-run"
   },
   "keywords": [
     "react",
