--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sensor component for React that notifies you when it goes in or out of the window viewport.",
   "main": "dist/visibility-sensor.js",
   "scripts": {
-    "build": "./node_modules/.bin/browserify -t ./node_modules/reactify -o dist/visibility-sensor.js",
+    "build": "gulp build",
     "build-test": "./node_modules/.bin/browserify -t ./node_modules/reactify -o tests/bundle.js tests/visibility-sensor-spec.jsx",
     "test": "npm run build-test && ./node_modules/karma/bin/karma start --single-run"
   },
@@ -20,6 +20,8 @@
   },
   "devDependencies": {
     "browserify": "^5.11.2",
+    "gulp": "^3.8.11",
+    "gulp-jsx": "^0.9.0",
     "karma": "^0.12.23",
     "karma-chrome-launcher": "^0.1.4",
     "karma-mocha": "^0.1.9",
