--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "browserify": "^5.11.2",
     "gulp": "^3.8.11",
     "gulp-jsx": "^0.9.0",
+    "gulp-rename": "^1.2.0",
     "karma": "^0.12.23",
     "karma-chrome-launcher": "^0.1.4",
     "karma-mocha": "^0.1.9",
