--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "react-visibility-sensor",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Sensor component for React that notifies you when it goes in or out of the window viewport.",
   "main": "visibility-sensor.js",
   "scripts": {
-    "build-test": "./node_modules/.bin/browserify -t ./node_modules/reactify -o tests/bundle.js tests/visibility-sensor-spec.jsx",
-    "test": "npm run build-test && ./node_modules/karma/bin/karma start --single-run"
+    "build-test": "browserify -t reactify -o tests/bundle.js tests/visibility-sensor-spec.jsx",
+    "test": "npm run build-test && karma start --single-run"
   },
   "keywords": [
     "react",
