--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build-example": "browserify -t reactify -o example/dist/bundle.js example/main.js",
     "build-test": "browserify -t reactify -o tests/bundle.js tests/visibility-sensor-spec.jsx",
-    "test": "npm run build-test && karma start --single-run"
+    "test": "npm run build-test && ./node_modules/karma/bin/karma start --single-run"
   },
   "keywords": [
     "react",
@@ -20,7 +20,7 @@
   },
   "devDependencies": {
     "browserify": "^5.11.2",
-    "karma": "^0.12.23",
+    "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.4",
     "karma-mocha": "^0.1.9",
     "karma-phantomjs-launcher": "^0.1.4",
