--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   ],
   "author": "joshwnj",
   "license": "MIT",
-  "dependencies": {
-    "react": "^0.13.1"
+  "peerDependencies": {
+    "react": ">=0.12.0 <0.14.0"
   },
   "devDependencies": {
     "browserify": "^5.11.2",
