--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build-example": "browserify -t reactify -o example/dist/bundle.js example/main.js",
     "build-test": "browserify -t reactify -o tests/bundle.js tests/visibility-sensor-spec.jsx",
+    "publish-gh-pages": "npm run build-example && ./bin/publish-gh-pages",
     "test": "npm run build-test && ./node_modules/karma/bin/karma start --single-run"
   },
   "keywords": [
@@ -40,5 +41,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/joshwnj/react-visibility-sensor.git"
+  },
+  "dependencies": {
+    "gh-pages": "^0.2.0"
   }
 }
