--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "browserify": "^5.11.2",
     "es5-shim": "^4.1.0",
+    "gh-pages": "^0.2.0",
     "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.4",
     "karma-mocha": "^0.1.9",
@@ -42,7 +43,5 @@
     "type": "git",
     "url": "https://github.com/joshwnj/react-visibility-sensor.git"
   },
-  "dependencies": {
-    "gh-pages": "^0.2.0"
-  }
+  "dependencies": {}
 }
