--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "karma-phantomjs-launcher": "^0.1.4",
     "mocha": "^1.21.4",
     "react-addons": "^0.9.0",
-    "react-tools": "^0.11.1",
-    "reactify": "^0.14.0"
+    "react-tools": "^0.11.1"
   },
   "browserify": {
     "transform": [
@@ -43,5 +42,7 @@
     "type": "git",
     "url": "https://github.com/joshwnj/react-visibility-sensor.git"
   },
-  "dependencies": {}
+  "dependencies": {
+    "reactify": "^0.14.0"
+  }
 }
