--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "author": "joshwnj",
   "license": "MIT",
   "peerDependencies": {
-    "react": ">=0.12.0 <0.14.0"
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0"
   },
   "devDependencies": {
     "browserify": "^5.11.2",
