--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "clean": "rm -rf dist && mkdir dist",
     "prebuild": "npm run clean",
-    "build": "browserify -t reactify -o dist/visibility-sensor.js visibility-sensor.js",
+    "build-umd": "browserify -u react -u react-dom -t browserify-shim --standalone VisibilitySensor -o dist/visibility-sensor.js visibility-sensor.js",
+    "build-minify": "uglifyjs -o dist/visibility-sensor.min.js dist/visibility-sensor.js",
+    "build": "npm run build-umd && npm run build-minify",
     "build-example": "mkdir -p example/dist && browserify -t reactify -o example/dist/bundle.js example/main.js",
     "build-test": "browserify -t reactify -o tests/bundle.js tests/visibility-sensor-spec.jsx",
     "publish-gh-pages": "npm run build-example && ./bin/publish-gh-pages",
@@ -26,6 +28,7 @@
   },
   "devDependencies": {
     "browserify": "^5.11.2",
+    "browserify-shim": "^3.8.12",
     "es5-shim": "^4.1.0",
     "gh-pages": "^0.2.0",
     "karma": "^0.12.31",
@@ -33,10 +36,15 @@
     "karma-mocha": "^0.1.9",
     "karma-phantomjs-launcher": "^0.1.4",
     "mocha": "^1.21.4",
-    "reactify": "^1.1.1"
+    "reactify": "^1.1.1",
+    "uglifyjs": "^2.4.10"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/joshwnj/react-visibility-sensor.git"
+  },
+  "browserify-shim": {
+    "react": "global:React",
+    "react-dom": "global:ReactDOM"
   }
 }
