--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "karma-mocha": "^0.1.9",
     "karma-phantomjs-launcher": "^0.1.4",
     "mocha": "^1.21.4",
-    "react": "^0.14.0 || ^15.0.0",
-    "react-dom": "^0.14.0 || ^15.0.0",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "reactify": "^1.1.1",
     "uglify-js": "^3.0.15"
   },
