--- a/package.json
+++ b/package.json
@@ -23,23 +23,23 @@
   "author": "joshwnj",
   "license": "MIT",
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0 || ^16.0.0",
-    "react-dom": "^0.14.0 || ^15.0.0 || ^16.0.0"
+    "react": ">=16.0.0",
+    "react-dom": ">=16.0.0"
   },
   "devDependencies": {
-    "browserify": "^5.11.2",
-    "browserify-shim": "^3.8.12",
-    "es5-shim": "^4.1.0",
-    "gh-pages": "^0.2.0",
-    "karma": "^0.12.31",
-    "karma-chrome-launcher": "^0.1.4",
-    "karma-mocha": "^0.1.9",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "mocha": "^1.21.4",
-    "react": "^0.14.0 || ^15.0.0",
-    "react-dom": "^0.14.0 || ^15.0.0",
+    "browserify": "^16.2.2",
+    "browserify-shim": "^3.8.14",
+    "es5-shim": "^4.5.10",
+    "gh-pages": "^1.2.0",
+    "karma": "^3.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "mocha": "^5.2.0",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "reactify": "^1.1.1",
-    "uglify-js": "^3.0.15"
+    "uglify-js": "^3.4.6"
   },
   "repository": {
     "type": "git",
@@ -50,7 +50,7 @@
     "react-dom": "global:ReactDOM"
   },
   "dependencies": {
-    "create-react-class": "^15.5.1",
-    "prop-types": "^15.5.4"
+    "create-react-class": "^15.6.3",
+    "prop-types": "^15.6.2"
   }
 }
