--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-visibility-sensor",
   "version": "5.0.0",
   "description": "Sensor component for React that notifies you when it goes in or out of the window viewport.",
-  "main": "visibility-sensor.js",
+  "main": "dist/visibility-sensor.js",
   "scripts": {
     "clean": "rm -rf dist && mkdir dist",
     "prebuild": "npm run clean",
@@ -30,8 +30,8 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "gh-pages": "^1.2.0",
-    "karma": "^2.0.5",
+    "gh-pages": "^2.0.1",
+    "karma": "^3.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
@@ -39,7 +39,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "uglify-js": "^3.4.6",
-    "uglifyjs-webpack-plugin": "^1.2.7",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.16.4",
     "webpack-cli": "^3.1.0"
   },
@@ -48,7 +48,6 @@
     "url": "https://github.com/joshwnj/react-visibility-sensor.git"
   },
   "dependencies": {
-    "create-react-class": "^15.6.3",
     "prop-types": "^15.6.2"
   }
 }
