--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "gh-pages": "^2.0.1",
+    "husky": "^1.1.2",
     "karma": "^3.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
+    "lint-staged": "^7.3.0",
     "mocha": "^5.2.0",
+    "prettier": "1.14.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "uglify-js": "^3.4.6",
@@ -49,5 +52,16 @@
   },
   "dependencies": {
     "prop-types": "^15.6.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json,css,md}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
